force-app/main/default/objects/Job_Card_Invoice__c/Job_Card_Invoice__c.object-meta.xml
<CustomObject>
    <label>Job Card Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Card Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>