force-app/main/default/objects/Job_Card_Invoice__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Job Card Invoices</relationshipLabel>
    <relationshipName>Job_Card_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>